--- a/views/_partials/settings-nav.html
+++ b/views/_partials/settings-nav.html
@@ -1,6 +1,20 @@
-<div class="col-md-3 list-group">
+<div class="col-md-3 list-group navmark">
   <a href="#" class="list-group-item disabled">用户设置</a>
-  <a href="/settings/profile" class="list-group-item active">基本信息</a>
-  <a href="/settings/admin" class="list-group-item">账户设置</a>
+  <a href="/settings/profile" class="list-group-item active" id="profile">基本信息</a>
+  <a href="/settings/admin" class="list-group-item" id="admin">账户设置</a>
 </div>
-
+<script src="../../public/js/jquery-3.2.1.js"></script>
+<script type="text/javascript">
+    var url = document.location.pathname.toString().split("/");
+    var current=url[url.length-1]
+    switch(current){
+    	case 'admin':
+    	       $("#admin").addClass("active").siblings().removeClass("active")
+    	       break;
+    	case 'profile':
+    	       $("#profile").addClass("active").siblings().removeClass("active")
+    	       break;
+        default:
+    	       break;
+    }
+</script>
