--- a/views/settings/profile.html
+++ b/views/settings/profile.html
@@ -74,7 +74,7 @@
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">昵称</label>
-        <input name="nickname" type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+        <input name="nickname" type="nickname" class="form-control" id="exampleInputPassword1" placeholder="">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">介绍</label>
@@ -96,7 +96,7 @@
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">生日</label>
-        <input name="birthday" type="password" class="form-control" id="exampleInputPassword2" placeholder="">
+        <input name="birthday" type="birthday" class="form-control" id="exampleInputPassword2" placeholder="">
       </div>
       <button type="submit" class="btn btn-success">保存</button>
     </form>
@@ -105,7 +105,7 @@
     <dl>
       <dt>头像设置</dt>
       <dd>
-        <img class="avatar" name="avatar" width="150" height="150" src="../public/img/avatar-max-img.png" alt="">
+        <img class="avatar" name="avatar" width="150" height="150" src="{{ user.avatar }}" alt="">
         <div>
           <button type="button" class="btn btn-default edit-avatar">更换头像</button>
         </div>
@@ -118,8 +118,10 @@
 <script>
   $('#basic_form').on('submit', function (e) {
       e.preventDefault()
+      //alert('11111')
       var formData = $(this).serialize()
-      console.log(formData)
+      // 
+       console.log(formData)
       $.ajax({
         url: '/settings/profile',
         type: 'post',
@@ -139,6 +141,44 @@
         }
       })
     })
+</script>
+<script>
+  //  window.getdata=function(){
+
+  //  }
+  window.onload = function () {
+   // console.log("{{user.email}}")
+    function getdata() {
+      $.ajax({
+        url: '/settings/profile',
+        type: "checkout",
+        // data: formData,
+        data: "{{ user.email }}",
+        success: function (data) {
+          //console.log(data)
+         // console.log("rrrrrrr"+data.result)
+          if (data.result == 1) {
+            var date = data.data.birth.toString();
+            $("input[name=nickname]").val(data.data.nickname);
+            $("input[name=bio]").val(data.data.bio);
+            $("input[name=gender]").val(data.data.gender);
+            // $("[value=" + data.data.gender + "]").attr("checked", true);
+            //$("input[name=tele]").val(data.data.tele);
+            $("input[name=birthday]").val(data.data.birthday);
+            // $("input[name=birth]").val((/^[0-9]{4}\-\d{2}\-\d{2}/g).exec(date));
+            $(".avatar").css({
+              "backgroundImage": "url(" + data.data.avatar + ")"
+            });
+          } else {
+            alert("尊敬的用户，请您登录！");
+            location = "/"
+          }
+        }
+      })
+    }
+    getdata();
+    window.getdata = getdata;
+  }
 </script>
 <script>
   $(function () {
