修改页面样式

--- a/views/topic/show.html
+++ b/views/topic/show.html
@@ -15,6 +15,7 @@
 <section class="container">
   <div class="row">
     <div class="col-md-9">
+      {{article.content}}
       <article class="markdown-body">
       <h1 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>测试</h1>
       <blockquote>
