--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
   <ul class="media-list" id="index_list">
   </ul>
   <hr/>
-  <nav aria-label="Page navigation">
+  <!-- <nav aria-label="Page navigation">
     <ul class="pagination">
       <li>
         <a href="#" aria-label="Previous">
@@ -25,7 +25,7 @@
       </a>
       </li>
     </ul>
-  </nav>
+  </nav> -->
 </section>
 {{/block}}
 {{block 'script'}}
