--- a/views/topic/new.html
+++ b/views/topic/new.html
@@ -41,12 +41,12 @@
         data: formData,
         dataType: 'json',
         success: function (data) {
-          alert('2222')
+          //alert('2222')
          // console.log(data)
           var err_code = data.err_code
-          alert(err_code)
+         // alert(err_code)
           if (err_code === 0) {
-            window.location.href = '/topic/show'
+            window.location.href = '/'
           } else if (err_code === 1) {
             window.alert('邮箱或者密码错误')
           } else if (err_code === 500) {
