--- a/views/topic/show.html
+++ b/views/topic/show.html
@@ -86,7 +86,7 @@
      // console.log('777777777777')
      // console.log(data)
       if(data.result==1){
-       console.log(data.content)
+      // console.log(data.content)
         var topic = data.content.topic
         var plate = data.content.plate
         var creatime = data.content.created_time
